<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Forge Manager</string>
    <string name="menu">Menu</string>
    <string name="more">Mais opções</string>
    <string name="back">Voltar</string>
    <string name="forward">Avançar</string>
    <string name="create">Criar arquivo ou pasta</string>
    <string name="sync">Sincronizar painéis</string>
    <string name="up">Pasta pai</string>
</resources>
